[gd_scene load_steps=2 format=2]

[ext_resource path="res://script/CarSpawner.gd" type="Script" id=1]

[node name="CarSpawner" type="Node2D"]
script = ExtResource( 1 )

[node name="CarSpawnTop" type="Position2D" parent="."]
position = Vector2( -172, 80 )

[node name="CarSpawnBottom" type="Position2D" parent="."]
position = Vector2( -172, 370 )

[node name="CarSpawnTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="timeout" from="CarSpawnTimer" to="." method="_on_CarSpawnTimer_timeout"]
